overflow fix for api wrapper, sidebar update, changing span to pre so it will scroll internally

--- a/src/css/components/4_pages/api-page.css
+++ b/src/css/components/4_pages/api-page.css
@@ -18,6 +18,7 @@
 }
 
 .api-content-wrapper {
+  overflow: auto;
 }
 
 .main-wrapper {
@@ -122,7 +123,7 @@
   }
 
   .list-container {
-    display: inline-block;
+    display: block;
     margin-bottom: 0;
   }
 
